--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,9 +22,9 @@
             >Github Pages</a
           >
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#">About</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
